# torque

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  package.json  rustfmt.toml  tsconfig.json
crates/m8/: Cargo.toml
crates/m8/src/: class.rs  export.rs  from_v8.rs  into_v8.rs  lib.rs  module.rs  tags.rs  v8type.rs
crates/torque/: Cargo.toml
crates/torque-compiler/: Cargo.toml
crates/torque-compiler/src/: compile_error.rs  compiler.rs  lib.rs
crates/torque-ecs/: Cargo.toml
crates/torque-ecs-macros/: Cargo.toml
crates/torque-ecs-macros/src/: component.rs  entity.rs  lib.rs
crates/torque-ecs/src/: component.rs  entity.rs  entity_id.rs  entity_ref.rs  extends.rs  lib.rs  system.rs  system_error.rs  weak_entity_ref.rs
crates/torque-ecs/src/system/: tests.rs
crates/torque-geometry/: Cargo.toml
crates/torque-geometry/src/: lib.rs  rect.rs  size.rs
crates/torque-jsx-runtime/: Cargo.toml
crates/torque-jsx-runtime/src/: lib.rs
crates/torque-layout/: Cargo.toml
crates/torque-renderer/: Cargo.toml
crates/torque-renderer-wgpu/: Cargo.toml
crates/torque-renderer-wgpu/src/: renderer.rs
crates/torque-runtime/: Cargo.toml
crates/torque-runtime-macros/: Cargo.toml
crates/torque-runtime-macros/src/: lib.rs
crates/torque-runtime/src/: lib.rs  runtime.rs  runtime_error.rs  runtime_event.rs  runtime_handle.rs  thread.rs  thread_context.rs  thread_handle.rs  window.rs
crates/torque-style/: Cargo.toml
crates/torque-style/src/: length_percent.rs  length_percent_auto.rs  lib.rs  property.rs  resolve.rs
crates/torque-style/src/core/: aspect_ratio.rs  border.rs  box_sizing.rs  display.rs  inset.rs  layout.rs  length_percent.rs  length_percent_auto.rs  margin.rs  max_size.rs  min_size.rs  mod.rs  overflow.rs  padding.rs  position.rs  scrollbar_width.rs  size.rs
crates/torque-ui/: Cargo.toml
crates/torque-ui/src/: children.rs  element.rs  lib.rs  node.rs  parent.rs  tree.rs  window.rs
crates/torque-ui/src/element/: tests.rs
crates/torque-ui/src/layout/: available_space.rs  input.rs  mod.rs  output.rs
crates/torque/src/: compiler.rs  console.rs  lib.rs  runtime.rs  window.rs
crates/torque/src/application/: event.rs  handle.rs  mod.rs
crates/torque/src/jsx_runtime/: mod.rs
crates/torque/src/style/: block.rs  core.rs  flexbox.rs  mod.rs  text.rs
crates/torque/src/ui/: children.rs  element.rs  image.rs  mod.rs  node.rs  node_id.rs  node_ref.rs  text.rs  tree.rs  window.rs
examples/class/: Cargo.toml
examples/class/src/: main.rs
examples/tree/: Cargo.toml
examples/tree/src/: main.rs
