[package]
edition = "2021"
name = "torque-ui"
version = "0.1.0"

[dependencies]
dyncast = "0.1.0"
log = "0.4.22"
m8 = { version = "0.1.0", path = "../m8" }
slotmap = "1.0.7"
torque-ecs = { version = "0.1.0", path = "../torque-ecs" }
torque-geometry = { version = "0.1.0", path = "../torque-geometry" }
torque-style = { version = "0.1.0", path = "../torque-style" }
v8.workspace = true
wgpu = "23.0.1"
winit = "0.30.7"

[dev-dependencies]
test-log = "0.2.16"
